fix hover effect bug on safari and mobile chrome.

--- a/scss/_hover-effects.scss
+++ b/scss/_hover-effects.scss
@@ -22,7 +22,6 @@ figure {
   img {
     display: block;
     max-width: 100%;
-    min-height: 100%;
     position: relative;
   }
 
